# Alzheimers

./: .gitignore  BENCHMARK.md  Dockerfile  README.md  app.py  cognitive_env.py  demo.html  demo.ipynb  dqn_agent.py  inference.py  models.py  openenv.yaml  patient_simulator.py  pyproject.toml  requirements.txt  rule_based_agent.py  task1_easy.py  task2_medium.py  task3_hard.py
configs/: early_onset.yaml  rapid_decliner.yaml  stable_elderly.yaml
results/: baselines.json  dqn_results.json  summary.csv  task1_results.json  task2_results.json  task3_results.json
server/: app.py  cognitive_env.py
