[project]
name = "cogtraceenv"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "torch>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"